Исправлено взаимодействие с LaunchSite
Миссии получаем через Set в LaunchSite